--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -17,4 +17,15 @@ jobs:
         run: |
           import platform
           print(platform.processor())
-        shell: python
+        shell: python 
+  run-windows-command:
+    runs-on: windows-latest
+    steps:
+      - name: Directory Powershell
+        run: Get-Location
+      - name: Directory Bash
+        run: pwd
+        shell: bash
+        
+
+        
