--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -20,12 +20,13 @@ jobs:
         shell: python 
   run-windows-command:
     runs-on: windows-latest
+    needs: ["run-shell-command"]
     steps:
       - name: Directory Powershell
         run: Get-Location
       - name: Directory Bash
         run: pwd
         shell: bash
-        
+
 
         
