adding ENV variables

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,15 +1,28 @@
 name: Actions Workflow
 
 on: 
-  schedule:
-    - cron: "33 12 * * 5"  # each friday at 12:33
-  #push:
-  pull_request:
-    types:
-      - "closed"
-      - "assigned"
-      - "opened"
-      - "reopened"
+  push:
+    branches:
+      - master
+      - 'feature/*' # it matches feature/feat1, but not feature/feat/featu2
+      - 'feature/**' ## it matches with both examples above
+    tags:
+      - v1.*
+    paths:
+      - '**.js' ## this workflow will run for each js file pushed
+      - "!filename.js" ## except if we push a file called filename.js
+      
+#  repository_dispatch:
+#    types: [build]
+#  schedule:
+#     - cron: "0/5 * * * *"
+#   push:  
+  # pull_request:
+  #   types:
+  #     - "closed"
+  #     - "assigned"
+  #     - "opened"
+  #     - "reopened"
     
 jobs:
   run-github-actions:
