--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -20,6 +20,8 @@ jobs:
           git branch --set-upstream-to=origin/main
           git pull
           ls -a 
+          echo $RANDOM >> random.txt
+          ls -la 
           git add -A 
           git commit -m "random file"
           git push
