--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -3,6 +3,16 @@ name: Context testing
 on: push
 
 jobs:
+  functions:
+    runs-on: ubuntu-latest
+    steps:
+      - name: dump
+        run: |
+          echo ${{contains( 'hello', 'll')}}
+          echo ${{ startWith('hello', 'he')}}
+          echo ${{ endsWith('hello', 'lo')}}
+          echo ${{ format('hello' {0} {1} {2}, 'world', '!','!')}}
+
   dump_contexts_to_log:
     runs-on: ubuntu-latest
     steps:
