--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -11,7 +11,7 @@ jobs:
           echo ${{contains( 'hello', 'll')}}
           echo ${{ startsWith('hello', 'he')}}
           echo ${{ endsWith('hello', 'lo')}}
-          echo ${{ format('hello' {0} {1} {2}, 'world', '!','!')}}
+          echo ${{ format('hello {0} {1} {2}', 'world', '!','!')}}
 
   dump_contexts_to_log:
     runs-on: ubuntu-latest
