--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -13,10 +13,8 @@ jobs:
         image: mongo
         ports:
           - "27017:27017"
-    container: 
-      image: node:13.5.0-alpine3.10
     steps: 
       - name: Post a user
-        run: "curl -X POST http://localhost:3001/api/user  -H 'Content-Type: application/json' -d '{\"username\":\"hello\",\"address\": \"dwded\"}'"
+        run: "curl -X POST http://localhost:3001/api/users  -H 'Content-Type: application/json' -d '{\"username\":\"hello\",\"address\": \"dwded\"}'"
       - name: Get user
         run: curl http://localhost:3001/api/users
